examples/example-router-firewall
# Firewall configuration written by oinkwall v0.3
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i eth0 -m mac --mac-source 14:56:e2:b5:a5:eb -j MARK --set-mark 200
-A FORWARD -o ppp0 -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -i ppp0 -d 203.0.113.46 -p tcp -m tcp --dport 26540 -j DNAT --to 192.168.25.17
-A POSTROUTING -o ppp0 -j SNAT --to-source 203.0.113.46
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-I INPUT -i lo -j ACCEPT
-A INPUT -s 192.0.2.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.25.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p udp -m udp --dport 1194 -j ACCEPT
-A INPUT -s 192.168.25.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.25.0/24 -p tcp -m tcp --dport 53 -j ACCEPT
# eBGP
-A INPUT -s 10.252.0.3 -p tcp -m tcp --dport 179 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p udp -m multiport --dport 33434:33535 -j REJECT
-A INPUT -m limit --limit 10/sec --limit-burst 100 -j LOG --log-prefix "IPT INPUT DEAD: " --log-level 7
-A FORWARD -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -i eth0 -o ppp0 -j ACCEPT
-A FORWARD -i ppp0 -o eth0 -d 192.168.25.17 -p tcp -m tcp --dport 26540 -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -m limit --limit 10/sec --limit-burst 100 -j LOG --log-prefix "IPT FORWARD DEAD: " --log-level 7
-A OUTPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -m conntrack --ctstate INVALID -j DROP
-I OUTPUT -o lo -j ACCEPT
-A OUTPUT -m owner --uid-owner 0 -j ACCEPT
-A OUTPUT -m owner --uid-owner 487 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -m owner --uid-owner bind -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -m owner --uid-owner bind -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -m owner --uid-owner ntp -j ACCEPT
# eBGP
-A OUTPUT -d 10.252.0.3 -p tcp -m tcp --dport 179 -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -m owner --uid-owner 0 -j ACCEPT
-A OUTPUT -m owner --uid-owner 487 -j ACCEPT
-A OUTPUT -m limit --limit 10/sec --limit-burst 100 -j LOG --log-prefix "IPT OUTPUT DEAD: " --log-level 7
COMMIT
# vim:ft=iptables
